fix: bottom icons container overlaps keyboard

--- a/src/App.css
+++ b/src/App.css
@@ -327,6 +327,7 @@ canvas {
 
 .keyboard-container:has(.react-simple-keyboard:not(.hidden)) .bottom-icons {
   top: 0;
+  height: fit-content;
 }
 
 @media (max-width: 900px) {
